# bonsai

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  codecov.yml
.claude/: claude_plan.md  settings.local.json
.github/workflows/: auto-tag-py.yml  python-wheels.yml  rust-cd.yml  rust-ci.yml  rust-pr.yml
bonsai/: Cargo.toml
bonsai-py/: Cargo.toml  README.md  pyproject.toml
bonsai-py/examples/: README.md  async_drone.py  boids_console.py  graphviz_demo.py  memoryless_chase.py  race_timeout.py  reactive_chase.py  simple_npc_ai.py  threaded_drone.py  visualizer_smoke.py
bonsai-py/python/bonsai_bt/: __init__.py  __init__.pyi
bonsai-py/python/bonsai_py/: __init__.py  __init__.pyi
bonsai-py/scripts/: README.md  regen-stubs.sh  verify.py
bonsai-py/src/: action_args.rs  behavior.rs  bt.rs  lib.rs  status.rs
bonsai-py/tests/: README.md  conftest.py  test_action_args.py  test_behavior.py  test_bt.py  test_drift.py  test_memory.py  test_module.py  test_mypy_strict.py  test_performance.py  test_reactive.py  test_status.py  test_telemetry.py  test_threading_and_pickle.py
bonsai/src/: behavior.rs  bt.rs  bt_telemetry.rs  event.rs  graph.rs  index.html  lib.rs  sequence.rs  state.rs  status.rs  telemetry.rs  telemetry_state.rs  tracer.rs  visualizer.rs  visualizer_server.rs  when_all.rs
bonsai/src/visualizer/: editor.rs  mod.rs  run.rs  types.rs
bonsai/tests/: behavior_tests.rs  blackboard_tests.rs  bt_tests.rs  dynamic_behavior_tests.rs  memoryless_allocations.rs  reactive_allocations.rs  telemetry_tests.rs  telemetry_tracer_tests.rs  tests.rs  visualizer_server_tests.rs
docs/concepts/: README.md
examples/: Cargo.toml  README.md
examples/src/: 3d.rs  boids_swarm.rs  lib.rs  pointcloud.rs
examples/src/3d/: main.rs
examples/src/async_drone/: jobs.rs  main.rs
examples/src/boids/: boid.rs  main.rs
examples/src/graphviz/: main.rs
examples/src/imnodes/: color_editor.rs  hello_world.rs  main.rs  multi_editor.rs
examples/src/memoryless_chase/: main.rs
examples/src/race_timeout/: main.rs
examples/src/reactive_chase/: main.rs
examples/src/simple_npc_ai/: main.rs
examples/src/visualizer_smoke/: main.rs
src/: behavior.rs  event.rs  lib.rs  sequence.rs  state.rs  status.rs  when_all.rs
tests/: behavior_tests.rs
