[package]
authors = ["Kristoffer Solberg Rakstad <kristoffer.solberg@cognite.com>"]
autotests = false
categories = []
description = "Behavior tree"
documentation = "https://docs.rs/bonsai-bt"
edition = "2021"
homepage = "https://github.com/sollimann/bonsai"
keywords = ["ai", "behavior", "tree", "robotics", "game"]
license = "MIT"
name = "bonsai-bt"
readme = "../README.md"
repository = "https://github.com/sollimann/bonsai.git"
rust-version = "1.80.0"
version = "0.9.0"

[lib]
name = "bonsai_bt"
path = "src/lib.rs"

[dependencies]
petgraph = "0.6.2"
thiserror = "2"
serde = { version = "1.0.137", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { version = "1.0.81" }

[[test]]
name = "tests"
